feat: add login and register routes using password hash and jwt token packages
